crates/keron-lang/tests/corpus/errors/check/match_missing_wildcard_struct.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: non-exhaustive `match` on `Point`: a wildcard arm `_` is required
  --> 4:9
  |
4 |   match p {
  |         ^
